# board_game

./: .gitignore  7_project.cpp  README.md  git.sh
board_game_code/: CMakeLists.txt  game.hpp  main.cpp  setup.hpp  testing.cpp
screenshots/: welcome.cpp
